# imagechain

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  test_file.txt  test_file_manifest.json
.github/workflows/: ci.yml
examples/: embedding_example.rs  upload_and_verify.py
python_service/: Dockerfile  Dockerfile.cuda  app.py  requirements.txt
src/: error.rs  lib.rs  main.rs  state.rs  utils.rs
src/api/: handlers.rs  mod.rs  responses.rs
src/core/: embeddings.rs  hash.rs  mod.rs  video.rs
src/models/: manifest.rs  mod.rs
tests/: test_core.rs
