[package]
name = "imagechain"
version = "0.1.0"
edition = "2021"
description = "Image and video processing with cryptographic and perceptual hashing"

[dependencies]
# Web server
axum = { version = "0.7", features = ["multipart", "json"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors", "trace"] }

# Image processing
image = { version = "0.24.0", features = ["jpeg", "png", "webp"] }
imageproc = "0.24.0"

# Deep learning for embeddings
tch = { version = "0.13.0", features = ["download-libtorch"] }
ndarray = "0.15.6"

# Video processing
ffmpeg-next = { version = "6.1", features = ["static"] }

# Hashing
sha3 = "0.10.0"
hex = "0.4.3"

# PDQ hashing
pdq-rs = "0.1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
